--- a/week-1/5-css-selectors/index.html
+++ b/week-1/5-css-selectors/index.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="/css/message.css" />
     <link rel="stylesheet" href="/css/message-css-selectors.css" />
     <link rel="stylesheet" href="message-backgrounds.css" />
+    <style>
+      #first-message {
+        background-color: red;
+      }
+
+      article {
+        background-color: cadetblue;
+      }
+
+      .message--latest {
+        background-color: yellow;
+      }
+    </style>
   </head>
 
   <body>
