--- a/week-3/19-search/index.html
+++ b/week-3/19-search/index.html
@@ -11,7 +11,10 @@
   <body>
     <div class="site-wrapper">
       <main>
-        <p>Delete this line and add your form.</p>
+        <p></p>
+        <form action="https://www.google.com/search" method="GET">
+          <input type="text" name="q" />
+        </form>
       </main>
     </div>
   </body>
