--- a/week-3/22-checkout/index.html
+++ b/week-3/22-checkout/index.html
@@ -38,6 +38,12 @@
           <h2 class="checkout__title">Checkout</h2>
           <form method="GET" id="checkout-form" class="checkout__form">
             <!-- Add the form fields here -->
+            <label for="name"> Name</label>
+            <input type="text" id="name" name="customer-name" /><br />
+            <label for="email"> email</label>
+            <input type="email" id="email" name="customer-email" /><br />
+            <label for="phone"> phone number</label>
+            <input type="tel" id="phone" name="customer-phone" /><br />
 
             <button type="submit">Complete Purchase</button>
           </form>
