--- a/week-3/23-comments/index.html
+++ b/week-3/23-comments/index.html
@@ -32,6 +32,11 @@
           <p>Add your comments and let us know what you think!</p>
 
           <!-- Your comment form goes here -->
+          <form method="GET">
+            <label for="comment"> comments </label>
+            <textarea id="comment" name="comment"></textarea>
+            <button>send comment</button>
+          </form>
         </div>
       </main>
     </div>
