--- a/week-3/24-dietary/index.html
+++ b/week-3/24-dietary/index.html
@@ -20,6 +20,15 @@
 
         <form>
           <!-- Your multiple choice goes here -->
+          <fieldset>
+            <legend>Please select all of your dietary requirements</legend>
+            <label> <input type="checkbox" name="dietary" /> Halal </label><br /><br />
+            <label> <input type="checkbox" name="dietary" /> Kosher </label><br /><br />
+            <label> <input type="checkbox" name="dietary" /> Vegetarian </label><br /><br />
+            <label> <input type="checkbox" name="dietary" /> Vegan </label><br /><br />
+            <label> <input type="checkbox" name="dietary" /> Gluten Free </label><br /><br />
+          </fieldset>
+
           <button type="submit">Submit</button>
         </form>
       </main>
