--- a/week-3/25-shirt-size/index.html
+++ b/week-3/25-shirt-size/index.html
@@ -29,7 +29,12 @@
                 </div>
               </td>
               <td>
-                Medium
+                <label class="screenreader" for="size">Choose a size</label>
+                <select id="size" name="sizelist" form="">
+                  <option value="Small">Small</option>
+                  <option value="value" selected>Medium</option>
+                  <option value="Large">Large</option>
+                </select>
               </td>
               <td>
                 1
